Fixed admins array missing in config default

--- a/config.example.json
+++ b/config.example.json
@@ -3,5 +3,6 @@
     "owner_id": "",
     "prefix": "/",
     "shard_max": false,
-    "detailed_logging": false
+    "detailed_logging": false,
+    "admins": []
 }
